2007-07-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java: 
	New file, contributed by Klaus Rheinwald.

2007-07-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/SymbolAxis.java
	(DEFAULT_GRID_BAND_ALTERNATE_PAINT): New field,
	(gridBandAlternatePaint): New field,
	(SymbolAxis): Initialise new field,
	(getGridBandAlternatePaint): New method,
	(setGridBandAlternatePaint): Likewise,
	(equals): Test new field,
	(writeObject): Handle new field,
	(readObject): Likewise,
	* tests/org/jfree/chart/axis/junit/SymbolAxisTests.java
	(testEquals): Added check for new field.

2007-07-25  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/chart/swt/ChartComposite.java
	pass mouse moved events to listening ChartMouseListeners.

2007-07-18	David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/demo/PieChartDemo1.java
	(createChart): Modified settings,
	* source/org/jfree/chart/plot/PiePlot.java
	(DEFAULT_INTERIOR_GAP): Modified default,
	(DEFAULT_LABEL_SHADOW_PAINT): Likewise,
	(simpleLabels): New field,
	(labelPadding): Likewise,
	(simpleLabelOffset): Likewise,
	(PiePlot(PieDataset)): Initialise new fields,
	(getLabelPadding): New method,
	(setLabelPadding): Likewise,
	(getSimpleLabels): Likewise,
	(setSimpleLabels): Likewise,
	(getSimpleLabelOffset): Likewise,
	(setSimpleLabelOffset): Likewise,
	(drawPie): Added simple label handling,
	(drawSimpleLabels): New method,
	(drawLabels): Reformatting,
	(drawLeftLabels): Set label padding,
	(drawRightLabels): Likewise,
	(equals): Updated for new fields,
	* source/org/jfree/chart/plot/PiePlot3D.java
	(draw): Updated for simple labels.

2007-07-18  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CombinedRangeXYPlot.java
	(remove): Actually remove the subplot.

2007-07-16  Henry Proudhon  <henry.proudhon@insa-lyon.fr>
